scripts_cnet/logs/clip_ft-4477536.out
=======================
Loading Anaconda Module...
  File "/scratch/users/oince22/vwsd/scripts_google/clip_ft_pred.py", line 32
    print("\nData config", f"{config["data"]}", "\n")
                                      ^^^^
SyntaxError: f-string: unmatched '['
